<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:paddingBottom="70dp"
    tools:context=".ui.fragment.star.starFragment">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@null"
        app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
        android:elevation="0dp">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/star_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="0dp"
                app:contentInsetStart="0dp"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="noScroll">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintTop_toTopOf="parent">
                    <androidx.cardview.widget.CardView
                        android:id="@+id/main_search"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/search_size"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:layout_marginStart="5dp"
                        app:cardCornerRadius="20dp"
                        app:cardElevation="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/star_button"
                        app:layout_constraintTop_toTopOf="parent">
                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <com.airbnb.lottie.LottieAnimationView
                                android:id="@+id/star_lottie"
                                android:layout_width="@dimen/search_size"
                                android:layout_height="@dimen/search_size"
                                android:layout_marginStart="10dp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:lottie_autoPlay="true"
                                app:lottie_loop="true"
                                app:lottie_rawRes="@raw/flydog" />
                            <EditText
                                android:id="@+id/star_text"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_margin="5dp"
                                android:autofillHints="username"
                                android:background="@null"
                                android:hint="输入歌名"
                                android:textColor="#000000"
                                android:textSize="15sp"
                                app:layout_constraintStart_toEndOf="@id/star_lottie"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintBottom_toBottomOf="parent" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </androidx.cardview.widget.CardView>
                    <ImageButton
                        android:id="@+id/star_button"
                        android:layout_width="@dimen/search_size"
                        android:layout_height="@dimen/search_size"
                        android:layout_marginEnd="10dp"
                        android:background="@null"
                        android:src="@drawable/icon_note_right"
                        android:textColor="#000000"
                        android:textSize="30sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@id/star_toolbar">
            <ImageView
                android:id="@+id/user_icon_star"
                android:layout_width="@dimen/star_icon"
                android:layout_height="@dimen/star_icon"
                android:layout_marginStart="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/dog" />

            <TextView
                android:id="@+id/user_name_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:lineSpacingMultiplier="2"
                android:text="@string/user_name_star"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="@+id/user_icon_star"
                app:layout_constraintStart_toEndOf="@+id/user_icon_star"
                app:layout_constraintTop_toTopOf="parent" />
            <ImageView
                android:id="@+id/user_vip_star"
                android:layout_width="@dimen/star_icon"
                android:layout_height="@dimen/star_icon"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toEndOf="@+id/user_name_star"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/icon_vip" />
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/star_RecyclerView_first"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/user_name_star"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="10dp"
                android:clipToPadding="false"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:nestedScrollingEnabled="false"
                android:scrollbars="none" />
            <TextView
                android:id="@+id/user_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/user_all"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/star_RecyclerView_first"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageButton
                android:id="@+id/play_button"
                android:layout_width="@dimen/star_icon"
                android:layout_height="@dimen/star_icon"
                android:layout_marginStart="10dp"
                android:background="@null"
                android:src="@drawable/icon_play"
                app:layout_constraintBottom_toBottomOf="@+id/user_all"
                app:layout_constraintStart_toEndOf="@+id/user_all"
                app:layout_constraintTop_toTopOf="@+id/user_all" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/star_RecyclerView_second"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/user_all"
                app:layout_constraintStart_toStartOf="parent"
                android:padding="10dp"
                android:layout_margin="10dp" />
            <TextView
                android:id="@+id/user_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_list"
                android:textColor="#000000"
                android:layout_marginStart="10dp"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/star_RecyclerView_second"
                app:layout_constraintStart_toStartOf="parent" />
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/star_RecyclerView_third"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/user_list"
                app:layout_constraintStart_toStartOf="parent"
                android:padding="10dp"
                android:layout_margin="10dp" />
            <View
                android:id="@+id/user_song"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                app:layout_constraintTop_toBottomOf="@+id/star_RecyclerView_third"
            />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
